tests/negative/test_decl_name_taken.orb
fnc main () () {
    sym x:i32;
    sym (x:ptr null);
};